[gd_scene load_steps=2 format=2]

[ext_resource path="res://characters/enemy_generator.gd" type="Script" id=1]

[node name="Generator" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="WaveTimer" type="Timer" parent="."]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
